apps.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: parcial-jarm
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: app1, namespace: parcial-jarm}
spec:
  replicas: 1
  selector: {matchLabels: {app: app1}}
  template:
    metadata: {labels: {app: app1}}
    spec:
      containers:
      - {name: app1, image: "nginx:1.27", ports: [{containerPort: 80}]}
---
apiVersion: v1
kind: Service
metadata: {name: app1, namespace: parcial-jarm}
spec:
  selector: {app: app1}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: app2, namespace: parcial-jarm}
spec:
  replicas: 1
  selector: {matchLabels: {app: app2}}
  template:
    metadata: {labels: {app: app2}}
    spec:
      containers:
      - {name: app2, image: "httpd:2.4", ports: [{containerPort: 80}]}
---
apiVersion: v1
kind: Service
metadata: {name: app2, namespace: parcial-jarm}
spec:
  selector: {app: app2}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: app3, namespace: parcial-jarm}
spec:
  replicas: 1
  selector: {matchLabels: {app: app3}}
  template:
    metadata: {labels: {app: app3}}
    spec:
      containers:
      - {name: app3, image: "traefik/whoami", ports: [{containerPort: 80}]}
---
apiVersion: v1
kind: Service
metadata: {name: app3, namespace: parcial-jarm}
spec:
  selector: {app: app3}
  ports: [{port: 80, targetPort: 80}]
---
apiVersion: apps/v1
kind: Deployment
metadata: {name: app4, namespace: parcial-jarm}
spec:
  replicas: 1
  selector: {matchLabels: {app: app4}}
  template:
    metadata: {labels: {app: app4}}
    spec:
      containers:
      - {name: app4, image: "nginxdemos/hello", ports: [{containerPort: 80}]}
---
apiVersion: v1
kind: Service
metadata: {name: app4, namespace: parcial-jarm}
spec:
  selector: {app: app4}
  ports: [{port: 80, targetPort: 80}]
